2008-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-font-lock.el (haskell-font-lock-symbols-alist): Change the
	character used for the composition operator.

	* haskell-indent.el (haskell-indent-map): Disable C-c C-g binding since
	C-g is a special key not to be used like that.

2008-05-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-cabal.el (haskell-cabal-find-file): Ignore directories.

2008-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-spot-prompt): New function.
	(inferior-haskell-mode): Use it.
	(inferior-haskell-seen-prompt): New var.
	(inferior-haskell-wait-for-prompt): Use it.
	(inferior-haskell-send-command): Reset it.
	(inferior-haskell-type): Avoid use of remove-it.

	* inf-haskell.el (inferior-haskell-info-xref-re): Allow a column-range.
	Reported by Jose A. Ortega Ruiz <jao@google.com>.
	(inferior-haskell-error-regexp-alist): Use the extra column-end info
	if available.

2008-02-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indentation.el: Fix up general coding convention stuff.
	(haskell-indentation-mode): Use define-minor-mode.
	(turn-on-haskell-indentation, turn-off-haskell-indentation):
	Remove, fold into haskell-indentation-mode.

2008-02-28  Kristof Bastiaensen  <kristof@vleeuwen.org>

	* haskell-indentation.el: New file.

2008-02-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (haskell-indent-region): New dummy function.
	(turn-on-haskell-indent): Use it to be more honest.

	* haskell-mode.el (literate-haskell-mode): Fix up mode line.
	Disable fill-comment-paragraph in Bird style.

	* inf-haskell.el (subst-char-in-string, make-temp-file):
	Add fallback definitions for XEmacs-21.4.

2008-02-28  Greg Steuck  <greg@nest.cx>  (tiny change)

	* inf-haskell.el (inferior-haskell-find-haddock): Jump to the symbol
	anchor within Haddock.

2008-02-18  Daniel Burrows  <dburrows@debian.org>  (tiny change)
